# n3rgy_consumer_api_client

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
src/: auth.rs  lib.rs
src/api/: client.rs  consumption.rs  error.rs  mod.rs  tariff.rs
src/internal/: consumption.rs  mod.rs  tariff.rs  utils.rs
