[package]
name = "n3rgy"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
url = "2.5"
thiserror = "1.0"
