[package]
name = "n3rgy_consumer_api_client"
version = "0.1.0"
edition = "2021"
authors = ["rars <2265225+rars@users.noreply.github.com>"]
description = "A client for retrieving energy data from n3rgy's consumer API"
license = "MIT"
repository = "https://github.com/rars/n3rgy_consumer_api_client"
readme = "README.md"
keywords = ["energy", "data"]
categories = ["api-bindings"]
rust-version = "1.81"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
